--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,6 @@
 /*  your css code here. If applicable */
+ body {
+        background-size: cover;
+        background-position: center;
+        background-repeat: no-repeat;
+      }
